# renderizacao

./: .env  .gitignore  README.md  __init__.py  generate_project.py  image.py  main.py  mosaic.py  overlays.py  parallax.py  project_example.json  pyproject.toml  render.py  requirements.txt  single.py  system_prompt.txt  text.py  typewriting.py
effects/: ken_burns.py  overlay_extras.py  overlays.py
scenes/: __init__.py  flip_y.py  mosaic.py  parallax.py  single.py  text_highlight.py  typewriting.py
transitions/: crossfade.py
utils/: image.py  transcribe.py
